# Buhera-West

./: .gitignore  Cargo.toml  Dockerfile.backend  README.md  THREE_JS_INTEGRATION_GUIDE.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: buhera-west.aux  buhera-west.fdb_latexmk  buhera-west.fls  buhera-west.out
docs/foundation/: distributed-energy.md
docs/fragments/: bayesian.md  fusion.md  measurement.md  phantom.md  reconstruction.md  signal.md  structure.md  time-correction.md
docs/ideas/: bhuru-sukurin.aux  bhuru-sukurin.fdb_latexmk  bhuru-sukurin.fls  bhuru-sukurin.out  bhuru-sukurin.tex  bhuru-sukurin.toc  necessity.aux  necessity.fdb_latexmk  necessity.fls  necessity.out  necessity.tex
frontend/yokozuna/: .env.example  AGRICULTURAL_AVIATION_IMPLEMENTATION.md  AI_INTEGRATION.md  AMBIENT_AUDIO_SETUP.md  BACKGROUND_DISTILLATION.md  Dockerfile  ENV_SETUP.md  WEATHER_SETUP.md  fix-env.js  next.config.js  package-lock.json  package.json  setup-env.js
frontend/yokozuna/public/fragments/: landing.js
frontend/yokozuna/public/models/: earth_orbit.glb  gpm_radar_data_-_typhoon_talim_2017-09-13_1540.glb  radar.glb  radar_circle_02.glb
frontend/yokozuna/public/shaders/: Appel_ShadingRenderingsOfSolids_Fragment.glsl  Arctic_Circle_Fragment.glsl  BVH_Animated_Model_Fragment.glsl  BVH_Animated_Model_Fragment_Mobile.glsl  BVH_Model_Instancing_Fragment.glsl  BVH_Model_Instancing_Fragment_Mobile.glsl  BVH_Point_Light_Source_Fragment.glsl  BVH_Point_Light_Source_Fragment_Mobile.glsl  BVH_Spot_Light_Source_Fragment.glsl  BVH_Spot_Light_Source_Fragment_Mobile.glsl  BVH_Terrain_Fragment.glsl  BVH_Visualizer_Fragment.glsl  Bi-Directional_Difficult_Lighting_Fragment.glsl  Bi-Directional_Difficult_Lighting_Fragment_Mobile.glsl  Bi-Directional_PathTracing_Fragment.glsl  Billiard_Table_Fragment.glsl  CSG_Museum_1_Fragment.glsl  CSG_Museum_2_Fragment.glsl  CSG_Museum_3_Fragment.glsl  CSG_Museum_4_Fragment.glsl  Cheap_Torus_Fragment.glsl  Compare_Bi-Directional_Approach_Fragment.glsl  Compare_Uni-Directional_Approach_Fragment.glsl  Constructive_Solid_Geometry_Fragment.glsl  Convex_Polyhedra_Fragment.glsl  Cornell_Box_Fragment.glsl  Fractal3D_Fragment.glsl  Fractal3D_Fragment_Mobile.glsl  GameEngine_PathTracer_Fragment.glsl  Geometry_Showcase_Fragment.glsl  Gltf_Viewer_Fragment.glsl  Grid_Acceleration_Fragment.glsl  HDRI_Environment_Fragment.glsl  HDRI_Environment_Fragment_Mobile.glsl  Invisible_Date_Fragment.glsl  Invisible_Date_Fragment_Mobile.glsl  Kajiya_TheRenderingEquation_Fragment.glsl  Light_Shafts_Fragment.glsl  Material_Roughness_Fragment.glsl  MultiSPF_Dynamic_Scene_Fragment.glsl  (+16 more)
frontend/yokozuna/src/: client_secret_1026084035716-uf3ld8chta5gtcdbc75j0av3nskmfnu2.apps.googleusercontent.com.json
frontend/yokozuna/src/components/: AtomicTimeStatusPanel.jsx  Education.js  EnhancedTimeControlDemo.jsx  EnvironmentalIntelligenceViewer.jsx  EnvironmentalIntelligenceViewer.tsx  Experience.js  Footer.js  GlobalTimeControls.jsx  HireMe.js  Logo.js  Navbar.js  SatelliteAtomicClockDemo.jsx  ShowcaseHub.jsx  Skills.js  TimeAwareComponent.jsx  TimeControlsToggle.jsx  TransitionEffect.js
frontend/yokozuna/src/components/Hooks/: useAIOrchestrator.js
frontend/yokozuna/src/components/acquisition/: CellTower.jsx  Hardware.jsx  Lidar.jsx  MIMO.jsx  README.md  Satellite.jsx  SensorDashboard.jsx
frontend/yokozuna/src/components/agricultural/: AgriculturalVisualization.jsx  CropFieldDemo.jsx  MaizeCrop.jsx  MaizeMaterial.jsx  WheatCrop.jsx  WheatMaterial.jsx
frontend/yokozuna/src/components/terrain/rust-project/: Cargo.toml
frontend/yokozuna/src/components/terrain/rust-project/src/: lib.rs
frontend/yokozuna/src/config/: coordinates.js
frontend/yokozuna/src/contexts/: AIContext.jsx  CameraContext.jsx  TimeContext.jsx
frontend/yokozuna/src/hooks/: useSceneTime.js
frontend/yokozuna/src/pages/: _app.js  about.js  agriculture.js  audio-demo.js  geography.js  hydrology.js  index.js  mercator.js  orbit.js  sensors.js  state.js  terrain.js  test-timeline.js  weather.js
frontend/yokozuna/src/services/: ambientAudioService.js  atomicTimeService.js  backgroundDistillation.js  enhancedWeatherService.js  globalDataService.js  nasaESATimingService.js  spotifyService.js  temporalDataManager.js  weatherService.js  youtubeService.js
frontend/yokozuna/src/types/: three-fiber.d.ts
frontend/yokozuna/src/utils/: visualization-helpers.ts  webgpu-mock.js
frontend/yokozuna/src/wasm/: agriculture_engine.js  airline_engine.js  mercator_engine.js  terrain_engine.js
src/: config.rs  error.rs  main.rs
src/atmospheric_energy/: energy_coordination.rs  entropy_navigation.rs  mod.rs  molecular_processors.rs  zero_computation.rs
src/data_fusion/: bayesian_network.rs  fusion_algorithms.rs  fuzzy_evidence.rs  measurement.rs  mod.rs  optimization.rs  phantom_alignment.rs  phantom_example.rs  phantom_reality_4d.rs  phantom_satellites.rs  temporal_alignment.rs
src/data_ingestion/: mod.rs
src/data_ingestion/collectors/: mod.rs
src/data_ingestion/publications/: mod.rs
src/data_ingestion/scheduler/: mod.rs
src/data_ingestion/sources/: mod.rs  satellite.rs
src/data_ingestion/storage/: mod.rs
src/environmental_intelligence/: agricultural_enhanced.rs  computational_engine.rs  geological.rs  mod.rs  oceanic.rs  solar.rs
src/pages/: index.js
src/reconstruction/: mod.rs
src/services/: globalDataService.js
src/signal/: categorical_predeterminism.rs  comprehensive_integration_engine.rs  computer_vision_integration.rs  continuous_learning.rs  core_types.rs  crossfilter_engine.rs  crossfilter_web_interface.rs  entropy_engineering.rs  gps_differential.rs  groundwater_detection.rs  hardware_controlled_reflectance.rs  hardware_oscillatory_harvesting.rs  helicopter_inspired_atmospheric.rs  huggingface_integration.rs  mimo_oscillatory_harvesting.rs  mineral_detection_localization.rs  mod.rs  molecular_spectrometry_engine.rs  oscillatory_framework.rs  segment_aware_atmospheric.rs  solar_reflectance_atmospheric.rs  temporal_predetermination.rs
web/static/: crossfilter-dashboard.js
(+169 files in other folders)
