pub struct SignalEnhancedWeatherSystem {
    pub signal_atmospheric_network: GlobalSignalAtmosphericNetwork,
    pub traditional_weather_models: Vec<Box<dyn WeatherModel>>,
    pub signal_weather_fusion_engine: SignalWeatherFusionEngine,
    pub enhanced_prediction_models: Vec<Box<dyn EnhancedPredictionModel>>,
}

impl SignalEnhancedWeatherSystem {
    pub fn create_enhanced_weather_forecast(&mut self,
                                          forecast_horizon_hours: f64) -> EnhancedWeatherForecast {
        
        // Step 1: Get current atmospheric state from signal network
        let current_atmospheric_state = self.signal_atmospheric_network
            .create_global_atmospheric_map(SystemTime::now().as_secs_f64());
        
        // Step 2: Get traditional weather model predictions
        let traditional_forecasts = self.traditional_weather_models
            .iter()
            .map(|model| model.predict_weather(forecast_horizon_hours))
            .collect::<Vec<_>>();
        
        // Step 3: Fuse signal-derived data with traditional models
        let fused_forecast = self.signal_weather_fusion_engine.fuse_signal_and_traditional_data(
            &current_atmospheric_state,
            &traditional_forecasts
        );
        
        // Step 4: Apply enhanced prediction models
        let enhanced_forecast = self.enhanced_prediction_models
            .iter()
            .map(|model| model.predict_with_signal_enhancement(&fused_forecast))
            .fold(fused_forecast, |acc, prediction| acc.merge_with(prediction));
        
        EnhancedWeatherForecast {
            traditional_forecast_component: traditional_forecasts,
            signal_derived_component: current_atmospheric_state,
            enhanced_prediction: enhanced_forecast,
            forecast_improvement_metrics: self.compute_improvement_metrics(&enhanced_forecast),
            signal_contribution_percentage: self.compute_signal_contribution(&enhanced_forecast),
        }
    }
}
pub struct SignalEnhancedWeatherSystem {
    pub signal_atmospheric_network: GlobalSignalAtmosphericNetwork,
    pub traditional_weather_models: Vec<Box<dyn WeatherModel>>,
    pub signal_weather_fusion_engine: SignalWeatherFusionEngine,
    pub enhanced_prediction_models: Vec<Box<dyn EnhancedPredictionModel>>,
}

impl SignalEnhancedWeatherSystem {
    pub fn create_enhanced_weather_forecast(&mut self,
                                          forecast_horizon_hours: f64) -> EnhancedWeatherForecast {
        
        // Step 1: Get current atmospheric state from signal network
        let current_atmospheric_state = self.signal_atmospheric_network
            .create_global_atmospheric_map(SystemTime::now().as_secs_f64());
        
        // Step 2: Get traditional weather model predictions
        let traditional_forecasts = self.traditional_weather_models
            .iter()
            .map(|model| model.predict_weather(forecast_horizon_hours))
            .collect::<Vec<_>>();
        
        // Step 3: Fuse signal-derived data with traditional models
        let fused_forecast = self.signal_weather_fusion_engine.fuse_signal_and_traditional_data(
            &current_atmospheric_state,
            &traditional_forecasts
        );
        
        // Step 4: Apply enhanced prediction models
        let enhanced_forecast = self.enhanced_prediction_models
            .iter()
            .map(|model| model.predict_with_signal_enhancement(&fused_forecast))
            .fold(fused_forecast, |acc, prediction| acc.merge_with(prediction));
        
        EnhancedWeatherForecast {
            traditional_forecast_component: traditional_forecasts,
            signal_derived_component: current_atmospheric_state,
            enhanced_prediction: enhanced_forecast,
            forecast_improvement_metrics: self.compute_improvement_metrics(&enhanced_forecast),
            signal_contribution_percentage: self.compute_signal_contribution(&enhanced_forecast),
        }
    }
}
[package]
name = "buhera-west"
version = "0.1.0"
edition = "2021"
authors = ["Buhera West Team"]
description = "High-Performance Agricultural Weather Analysis Platform"
license = "MIT"
repository = "https://github.com/yourusername/buhera-west"
keywords = ["weather", "agriculture", "meteorology", "forecast", "analytics"]
categories = ["science", "web-programming", "api-bindings"]

[workspace]
members = [
    "crates/weather-engine",
    "crates/agriculture-analytics", 
    "crates/data-ingestion",
    "crates/forecasting",
    "crates/spatial-analysis",
    "crates/api-server"
]

[dependencies]
# Async runtime and web framework
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression", "fs"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database and time series
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# gRPC and networking  
tonic = { version = "0.10", features = ["transport", "codegen", "prost"] }
tonic-build = "0.10"
prost = "0.12"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
urlencoding = "2.1"

# Mathematical and scientific computing
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
polars = { version = "0.36", features = ["lazy", "temporal", "dtype-datetime", "parquet", "csv"] }
arrow = "50.0"
rayon = "1.8"

# Geospatial and weather-specific
geo = "0.27"
geojson = "0.24"
proj = "0.27"
netcdf = "0.8"
hdf5 = "0.8"

# Numerical methods and statistics
nalgebra = "0.32"
statrs = "0.16"
linfa = { version = "0.7", features = ["serde"] }
linfa-linear = "0.7"
smartcore = { version = "0.3", features = ["serde"] }

# Random number generation for algorithms
rand = "0.8"
rand_distr = "0.4"

# Optimization libraries
argmin = "0.8"
argmin-math = "0.3"

# Advanced numerical methods
splines = "4.0"
rustfft = "6.1"

# LRU cache for temporal alignment
lru = "0.12"

# For collections and data structures
indexmap = "2.1"
smallvec = "1.11"

# Optimization and ML
candle-core = "0.3"
candle-nn = "0.3"
ort = "1.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Performance and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Parallel processing
crossbeam = "0.8"
dashmap = "5.5"

# Weather data formats
grib = "0.7"
bufr = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
wiremock = "0.5"

[[bench]]
name = "weather_processing"
harness = false

[[bench]]
name = "spatial_interpolation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
